# Ark-lang

./: .clangd  .gitignore  AUTHORS.md  Ark.bnf  CMakeLists.txt  LICENSE.md  Makefile  NOTICE.md  bkp.ps1  compile_commands.json
Doc/: ARk-lang.bnf  Ark.bnf  kpp-lang.bnf
src/: AST.hpp  CompilerArguments.hpp  CoreCompile.cpp  CoreCompile.hpp  Definitions.hpp  FileHandler.cpp  FileHandler.hpp  GlobalFlags.hpp  Lexer.cpp  Lexer.hpp  Logs.hpp  ModuleManager.cpp  ModuleManeger.hpp  Output.hpp  Parser.cpp  Parser.hpp  ParserHelpers.cpp  SymbolTable.hpp  TokenManager.hpp  Tools.hpp  main.cpp
test/: TestRunner  arkc  test.ark
test/lexer/: @build.txt  @test-list.txt  assignment.ark  assignment.exp  build.txt  expression.ark  expression.exp  functions.ark  functions.exp  structs.ark  test-list.txt  tmp-build.test  types.ark  types_test.ark  types_test.exp
tools/: Arkt.cpp  TestRunner.cpp  makefile
tools/test-runner/: main.cpp  makefile
